--- a/default.conf
+++ b/default.conf
@@ -5,8 +5,16 @@ server {
         auth_basic "off";
         client_max_body_size 40M;
         root /var/www/wordpress;
-        #try_files $uri $uri/ /index.html;
+	index index.php index.html index.htm;
+
+#        try_files $uri $uri/ /index.html;
+	try_files $uri $uri/ /index.php?q=$uri&$args;
     }
-    gzip on;
-    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+location ~ \.php$ {
+                try_files $uri =404;
+                fastcgi_split_path_info ^(.+\.php)(/.+)$;
+                fastcgi_pass unix:/var/run/php5-fpm.sock;
+                fastcgi_index index.php;
+                include fastcgi_params;
+        }
 }
