changes in default nginx

--- a/default.conf
+++ b/default.conf
@@ -1,13 +1,9 @@
 server {
     listen 80;
-    server_name web.projectrivers.com;
-    location / {
-        auth_basic "off";
-        client_max_body_size 40M;
+    server_name default_server;
         root /var/www/wordpress;
 	index index.php index.html index.htm;
-
-#        try_files $uri $uri/ /index.html;
+    location / {
 	try_files $uri $uri/ /index.php?q=$uri&$args;
     }
 location ~ \.php$ {
